# imagecraft

./: README.md  imagecraft_demo.ipynb  note.md  publish.yml  pyproject.toml  requirement.txt  test_imagecraft.py
.github/workflows/: publish.yml
examples/: demo.ipynb
imagecraft/: __init__.py  converters.py  crop.py  dynamic.py  enhancements.py  presets.py  resize.py  resize_crop.py  utils.py
imagecraft.egg-info/: PKG-INFO  SOURCES.txt
tests/: note.md  test_dynamic.py  test_presets.py  test_resize.py  test_utils.py
