[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imagecraft"
version = "0.2.4"
description = "Easy image resizing, cropping, and converting for Python and Django projects."
authors = [
  { name="Gin Li", email="qingge43@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pillow"]

[project.urls]
Homepage = "https://github.com/xgino/imagecraft"
Documentation = "https://github.com/xgino/imagecraft#readme"

[tool.setuptools.packages.find]
include = ["imagecraft*"]
exclude = ["readme_images*"]